<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.emailxl.consked.MainActivity">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/label_id"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/label_id"
            android:textColor="@android:color/black"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/edit_id"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:inputType="number"
            android:textColor="@android:color/black"/>
    </TableRow>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/radio_Expo"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_Expo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radio_Expo"
            android:textColor="@android:color/black"
            android:textStyle="bold"/>
        <RadioButton
            android:id="@+id/radio_StationJob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radio_StationJob"
            android:textColor="@android:color/black"
            android:textStyle="bold"/>
        <RadioButton
            android:id="@+id/radio_Worker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radio_Worker"
            android:textColor="@android:color/black"
            android:textStyle="bold"/>
    </RadioGroup>

    <TextView
        android:id="@+id/output"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/button_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_test"
        android:textColor="@android:color/black"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/button_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_next"
        android:textColor="@android:color/black"
        android:textStyle="bold"/>

</LinearLayout>
